welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:15: error: value c is not a member of object java.awt.Color
		if(getCouleurSol() == Color.c)
                                            ^